--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://hugoserif.netlify.com"
+baseURL = "https://hugoserif.netlify.com/"
 languageCode = "en-us"
 title = "Hugo Serif Theme"
 theme = "hugo-serif-theme"
