--- a/data/social.yaml
+++ b/data/social.yaml
@@ -1,5 +1,5 @@
 vimeo: ""
-twitter: "https://twitter.com"
+twitter: "https://twitter.com/"
 instagram: ""
 linkedin: "https://www.linkedin.com"
 facebook: ""
