update base url

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://keptn.netlify.com/"
+baseURL = "https://keptn.sh/"
 languageCode = "en-us"
 title = "keptn"
 theme = "hugo-serif-theme"
