--- a/config.toml
+++ b/config.toml
@@ -5,3 +5,10 @@ theme = "hugo-serif-theme"
 
 [params]
     google_analytics_id="UA-133584243-1"
+
+[blackfriday]
+    plainIDAnchors = true
+    hrefTargetBlank = false
+    angledQuotes = false
+    latexDashes = true
+    extensions = [""]
