try get rid of absolute urls in previews

--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://keptn.sh/"
 languageCode = "en-us"
 title = "keptn"
 theme = "hugo-serif-theme"
-
+relativeUrls = true
 
 
 [params]
