#1302 Do not show runbook automation tutorial with ServiceNow

--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,7 @@ theme = "hugo-serif-theme"
 relativeUrls = true
 
 ignoreFiles = [ 
+"^(.*/docs/0.6.0/usecases/runbook-automation-and-self-healing*)$",    
 "^(.*/docs/0.3.0/*)$", 
 "^(.*/docs/0.2.2/*)$", 
 "^(.*/docs/0.2.1/*)$", 
