--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,7 @@ theme = "hugo-serif-theme"
 relativeUrls = true
 
 ignoreFiles = [
+"^(.*/docs/0.4.0/*)$", 
 "^(.*/docs/0.3.0/*)$", 
 "^(.*/docs/0.2.2/*)$", 
 "^(.*/docs/0.2.1/*)$", 
