Disable relative URLs. fixes keptn/keptn.github.io/#794
Signed-off-by: Anton Huck <antonhuck@gmail.com>

--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 languageCode = "en-us"
 title = "keptn | Cloud-native application life-cycle orchestration"
 theme = "hugo-serif-theme"
-relativeUrls = true
+relativeUrls = false
 enableEmoji = true
 
 ignoreFiles = [
