--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,8 @@ command = "hugo -b $DEPLOY_PRIME_URL"
 
 [context.branch-deploy]
 command = "hugo -b $DEPLOY_PRIME_URL"
+
+[context.production.environment]
+HUGO_VERSION = "0.53"
+HUGO_ENV = "production"
+HUGO_ENABLEGITINFO = "true"
