--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -8,7 +8,7 @@ defaults:
 jobs:
   update-spec:
     env:
-      KEPTN_VERSION: '0.8.5'
+      KEPTN_VERSION: '0.8.6'
       SOURCE_REF: ${{ github.event.client_payload.ref }}
     runs-on: ubuntu-20.04
     steps:
@@ -16,12 +16,14 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: 'keptn-docs'
+          fetch-depth: 0
 
       - name: Checkout keptn core repo
         uses: actions/checkout@v2
         with:
           repository: 'keptn/keptn'
           path: 'keptn'
+          fetch-depth: 0
 
       - name: Install Keptn CLI
         id: install_keptn_cli
@@ -32,7 +34,7 @@ jobs:
         run: |
           # extract release branch version and replace minor version with x
           shopt -s extglob
-          echo "SOURCE_BRANCH=${SOURCE_REF#refs/heads/release-}" >> $GITHUB_ENV
+          echo "SOURCE_BRANCH=${SOURCE_REF#refs/tags/}" >> $GITHUB_ENV
           echo "SOURCE_VERSION_SLUG=${SOURCE_BRANCH/%.+([0-9])/.x}" >> $GITHUB_ENV
           shopt -u extglob
 
