--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -8,7 +8,6 @@ defaults:
 jobs:
   update-spec:
     env:
-      KEPTN_VERSION: '0.8.6'
       SOURCE_REF: ${{ github.event.client_payload.ref }}
     runs-on: ubuntu-20.04
     steps:
@@ -29,14 +28,14 @@ jobs:
         run: |
           # extract release branch version and replace minor version with x
           shopt -s extglob
-          echo "SOURCE_BRANCH=${SOURCE_REF#refs/tags/}" >> $GITHUB_ENV
-          echo "SOURCE_VERSION_SLUG=${SOURCE_BRANCH/%.+([0-9])/.x}" >> $GITHUB_ENV
+          echo "SOURCE_TAG=${SOURCE_REF#refs/tags/}" >> $GITHUB_ENV
+          echo "SOURCE_VERSION_SLUG=${SOURCE_TAG/%.+([0-9])/.x}" >> $GITHUB_ENV
           shopt -u extglob
 
       - name: Install Keptn CLI
         id: install_keptn_cli
         run: |
-          curl -sL https://get.keptn.sh | KEPTN_VERSION=${{ env.KEPTN_VERSION }} bash
+          curl -sL https://get.keptn.sh | KEPTN_VERSION=${{ env.SOURCE_TAG }} bash
 
       - name: Generate docs
         env:
@@ -63,9 +62,9 @@ jobs:
           base: master
           path: 'keptn-docs'
           labels: 'automated pr'
-          title: "Update keptn docs for release ${{ env.SOURCE_BRANCH }}"
+          title: "Update keptn docs for release ${{ env.SOURCE_TAG }}"
           body: |
             **This is an automated PR!**
 
             Update keptn docs to latest keptn/keptn release
-            New version: ${{ env.SOURCE_BRANCH }}
+            New version: ${{ env.SOURCE_TAG }}
