--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -30,7 +30,8 @@ jobs:
         run: |
           # extract release branch version and replace minor version with x
           shopt -s extglob
-          echo "SOURCE_TAG=${SOURCE_REF#refs/tags/}" >> $GITHUB_ENV
+          export "SOURCE_TAG=${SOURCE_REF#refs/tags/}"
+          echo $SOURCE_TAG >> $GITHUB_ENV
           echo "SOURCE_VERSION_SLUG=${SOURCE_TAG/%.+([0-9])/.x}" >> $GITHUB_ENV
           shopt -u extglob
 
