--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ relativeUrls = false
 enableEmoji = true
 
 ignoreFiles = [
+"^(.*/docs/0.6.0/*)$",    
 "^(.*/docs/0.5.0/*)$",
 "^(.*/docs/0.4.0/*)$",
 "^(.*/docs/0.3.0/*)$",
