--- a/content/docs/quickstart/demo/remediation.yaml
+++ b/content/docs/quickstart/demo/remediation.yaml
@@ -4,12 +4,11 @@ metadata:
   name: carts-remediation
 spec:
   remediations:
-    - problemType: Response time degradation
+    - problemType: out_of_memory
       actionsOnOpen:
-        - action: scaling
-          name: scaling
-          description: Scale up
-          value: "1"
+        - action: restart
+          name: restart
+          description: Restart Pod
     - problemType: response_time_p90
       actionsOnOpen:
         - action: scaling
