Set Go Routine as KeySLI
Signed-off-by: Johannes <johannes.braeuer@dynatrace.com>

--- a/content/docs/quickstart/demo/slo.yaml
+++ b/content/docs/quickstart/demo/slo.yaml
@@ -21,7 +21,7 @@ objectives:
           - ">=-80%"
   - sli: go_routines
     displayName: "Go Routines"
-    key_sli: false
+    key_sli: true
     pass:
       - criteria:
           - "<=60"
