--- a/content/docs/quickstart/demo/job/config.yaml
+++ b/content/docs/quickstart/demo/job/config.yaml
@@ -14,7 +14,23 @@ actions:
           - bash
           - '-c'
           - kubectl delete pods -l app=$(SERVICE) -n $(PROJECT)-$(STAGE)
-          - 
+        env:
+          - name: PROJECT
+            value: "$.data.project"
+            valueFrom: event
+          - name: STAGE
+            value: "$.data.stage"
+            valueFrom: event
+          - name: SERVICE
+            value: "$.data.service"
+            valueFrom: event
+      - name: "Show Pod"
+        image: bitnami/kubectl:1.21
+        workingDir: "/bin"
+        cmd:
+          - bash
+          - '-c'
+          - kubectl get pods -n $(PROJECT)-$(STAGE)
         env:
           - name: PROJECT
             value: "$.data.project"
