ci: Enable manual trigger of CLI docs update pipeline
Signed-off-by: Moritz Wiesinger <moritz.wiesinger@dynatrace.com>

--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -2,6 +2,11 @@ name: Auto Update - Docs
 on:
   repository_dispatch:
     types: [release-push]
+  workflow_dispatch:
+    inputs:
+      ref:
+        required: true
+        description: 'the ref...'
 defaults:
   run:
     shell: bash
