point artifact download to correct repo
Signed-off-by: Moritz Wiesinger <moritz.wiesinger@dynatrace.com>

--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -57,6 +57,7 @@ jobs:
           commit: ${{ env.SOURCE_GIT_COMMIT }}
           # directory where to extract artifacts to
           path: ./dist
+          repo: keptn/keptn
 
       - name: Debugging
         id: install_keptn_cli
