--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Extract Keptn CLI
         run: |
           ls -lahR ./dist
-          tar -xzf ./dist/keptn-*-linux-amd64.tar.gz
+          tar -xzvf ./dist/keptn-*-linux-amd64.tar.gz
           ls -lahR ./dist
           rm -f ./dist/keptn-*.tar.gz
           CLI=$(ls ./dist/keptn-*)
