--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -65,7 +65,7 @@ jobs:
           SOURCE_VERSION_SLUG: ${{ env.SOURCE_VERSION_SLUG }}
           DOCS_PATH: "./content/docs/${{ env.SOURCE_VERSION_SLUG }}/reference/cli/commands"
         run: |
-          if [[ ! -d $full_path ]]; then
+          if [[ ! -d "$DOCS_PATH" ]]; then
             mkdir -p "$DOCS_PATH"
           fi
           
