Add redirect to the GSoC website
Signed-off-by: Oleg Nenashev <o.v.nenashev@gmail.com>

--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,10 @@ command = "hugo -b $DEPLOY_PRIME_URL"
 HUGO_VERSION = "0.53"
 HUGO_ENV = "production"
 HUGO_ENABLEGITINFO = "true"
+
+[[redirects]]
+  from = "/gsoc"
+  to = "https://github.com/keptn/community/blob/main/mentorship/gsoc"
+  status = 301
+  force = false
+  query = {path = ":path"}
