improving HtmlTest URL Ignores
Signed-off-by: Simon Schrottner <simon.schrottner@dynatrace.com>

--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -20,5 +20,11 @@ IgnoreURLs:
 - "mailto"
 - "localhost:8080"
 - "linkedin.com"
+- "twitter.com/keptnProject"
+- "twitter.com/keptnproject"
 - "YOUR-ORG"
+- "YOUR.DOMAIN"
+- "your.domain"
+- "sockshop-dev"
+- "nip.io"
 StripQueryString: false
