--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -2,26 +2,23 @@ IgnoreDirectoryMissingTrailingSlash: true
 CheckDoctype: false
 #CheckExternal: false
 IgnoreDirs:
-- "docs/0.2."
-- "docs/0.3."
-- "docs/0.4."
-- "docs/0.5."
-- "docs/0.6."
-- "docs/0.7."
-- "docs/0.8."
-- "docs/0.9."
+# This excludes are not optimal and need refinement. 
+- "docs/0.\\d\\."
 - "docs/0.10."
 - "docs/0.11."
 - "docs/0.12."
 - "docs/0.13."
 IgnoreURLs:
+# GitHub Urls are ignored due to Request Limitations and getting a 429 instead
 - "github.com/keptn/keptn/issues"
 - "github.com/keptn/keptn/commit"
-- "mailto"
-- "localhost:8080"
-- "linkedin.com"
+# Twitter seems to be not reachable via GitHub Action
 - "twitter.com/keptnProject"
 - "twitter.com/keptnproject"
+# LinkedIn does not like automation and is returning a 999 Response Code
+- "linkedin.com"
+- "mailto"
+- "localhost:8080"
 - "YOUR-ORG"
 - "YOUR.DOMAIN"
 - "your.domain"
