--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -8,7 +8,6 @@ on:
   push:
     branches: [ master ]
   pull_request:
-    branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -26,6 +25,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
+      - name: MarkdownLint-Cli
+        run: make markdownlint
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
