--- a/.markdownlint.yml
+++ b/.markdownlint.yml
@@ -20,3 +20,6 @@ MD033: false
 
 # Fenced Code block should have a language specified https://github.com/DavidAnson/markdownlint/blob/main/doc/Rules.md#md040
 MD040: false
+
+# First line in a file should be a top-level heading https://github.com/DavidAnson/markdownlint/blob/main/doc/Rules.md#md041
+MD041: false
