--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -18,6 +18,8 @@ IgnoreURLs:
 - "github.com/keptn/keptn/commit"
 # GitHub Help does not like GitHub Action access
 - "help.github.com"
+# Old Announcements
+- "keptn.sh/docs/0.7"
 # Twitter seems to be not reachable via GitHub Action
 - "twitter.com/keptnProject"
 - "twitter.com/keptnproject"
