--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -64,12 +64,16 @@ jobs:
         env:
           SOURCE_VERSION_SLUG: ${{ env.SOURCE_VERSION_SLUG }}
           DOCS_PATH: "./content/docs/${{ env.SOURCE_VERSION_SLUG }}/reference/cli/commands"
+          RELATIVE_PATH: "../../../../"
         run: |
           if [[ ! -d "$DOCS_PATH" ]]; then
             mkdir -p "$DOCS_PATH"
           fi
           
           ./dist/keptn generate docs --dir="$DOCS_PATH"
+
+          # Replaces All Occurences of version links with a relative path
+          find $DOCS_PATH -print -type f -name '*.md' -exec sed -i "s@https://keptn.sh/docs/[[:digit:]][^/]*/@${RELATIVE_PATH}@g" {} \;
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
