--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,9 @@
-# baseURL = "https://keptn.sh/"
+baseURL = "https://keptn.sh/"
 languageCode = "en-us"
 title = "keptn | Cloud-native application life-cycle orchestration"
 theme = "hugo-serif-theme"
 relativeUrls = false
 enableEmoji = true
-baseUrl = "https://keptn.sh"
 
 ignoreFiles = [
 "^(.*/docs/0.7.x/*)$",
