Fix sitemap base URL (#1321)

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-# baseURL = "https://keptn.sh/"
+baseURL = "https://keptn.sh/"
 languageCode = "en-us"
 title = "keptn | Cloud-native application life-cycle orchestration"
 theme = "hugo-serif-theme"
