--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,6 @@ command = "hugo -b $DEPLOY_PRIME_URL"
 HUGO_VERSION = "0.53"
 HUGO_ENV = "production"
 HUGO_ENABLEGITINFO = "true"
+
+[context.production]
+command = "hugo -b $URL"
