--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -10,6 +10,7 @@ IgnoreDirs:
 - "docs/0.11."
 - "docs/0.12."
 - "docs/0.13."
+- "docs/0.14."
 # exlcuded because the paths do not exist for styles and contact
 - "404"
 IgnoreURLs:
