--- a/data/carousel.yaml
+++ b/data/carousel.yaml
@@ -1,31 +1,28 @@
-- weight: 1
-  title: "Join us at Kubecon!"
+entries:
+- title: "Skip Me Holder"
+- title: "Join us at Kubecon!"
   description: >
     <ul class="list-style-none">
       <li>Keptn Community Day</li>
       <li>Main Track Talks</li>
       <li>Meet the Maintainers!</li>
     </ul>
-  image: "img/carousel/template-easy-code.png"
+  image: "/images/home/carousel/kubecon_noram_2022.png"
   href: "https://docs.google.com/document/d/1x7gnqWAbxSr55IgmrT0wSJ6sh5KMoWfZvD2G-8U6_t8/edit?usp=sharing"
-- weight: 2
-  title: "New sub-project: Keptn Lifecycle Controller"
+- title: "Check it out: Keptn Lifecycle Controller"
   description: >
     <ul class="list-style-none">
       <li>Pre- and post-deployment checks and application health</li>
-      <li>Day two operations</li>
       <li>Fully GitOps- and operator based</li>
-      <li>Cloud native and headless</li>
     </ul>
-  image: "img/carousel/template-easy-code.png"
+  image: "/images/home/carousel/keptn-lifecycle-controller.png"
   href: "https://github.com/keptn/lifecycle-controller"
-- weight: 3
-  title: "Keptn LTS is Coming!"
-  description: >
-    <ul class="list-style-none">
-      <li>Long-Term Support release line</li>
-      <li>Keptn 1.0 release, ETA in November</li>
-      <li>Not just Keptn Core, services too</li>
-    </ul>
-  image: "img/carousel/template-easy-code.png"
-  href: "https://docs.google.com/document/d/1x7gnqWAbxSr55IgmrT0wSJ6sh5KMoWfZvD2G-8U6_t8/edit?usp=sharing"
+# - title: "Keptn LTS is Coming!"
+#   description: >
+#     <ul class="list-style-none">
+#       <li>Long-Term Support</li>
+#       <li>ETA in November</li>
+#       <li>Includes services too</li>
+#     </ul>
+#   image: "/images/home/carousel/keptn-lts.pn"
+#   href: "https://docs.google.com/document/d/1x7gnqWAbxSr55IgmrT0wSJ6sh5KMoWfZvD2G-8U6_t8/edit?usp=sharing"
